# c-project-image-steganography

./: CMakeLists.txt  guiexplain.md  hello.txt  stego-encode-decode-process.md  stego-encryption-decryption-process.md
include/: batch.h  gui_batch.h  gui_main.h  image_io.h  metadata.c  metadata.h  payload.h  stego_core.h
src/: aes_wrapper.c  batch.c  gui_batch.c  gui_main.c  image_io.c  main.c  metadata.c  payload.c  stego_io.c
